# test_python_package_release

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  release-please-config.json
.github/workflows/: ci.yml  claude-review.yml  publish.yml  release-please.yml
docs/superpowers/plans/: 2026-05-30-python-package-release-template.md
docs/superpowers/specs/: 2026-05-30-python-package-release-template-design.md
src/test_python_package_release/: __init__.py  calculator.py  strings.py
tests/: test_calculator.py  test_strings.py
