[project]
name = "test-python-package-release"
version = "0.2.0"
description = "Template library demonstrating Python package release CI/CD"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Dawid Wozniak", email = "wozniakos10@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_python_package_release"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "tox>=4.21",
    "tox-uv>=1.16",
    "pre-commit>=4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.tox]
env_list = ["py311", "py312", "py313", "lint", "type"]
requires = ["tox>=4.21", "tox-uv>=1.16"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = ["dev"]
commands = [["pytest", "{posargs}"]]

[tool.tox.env.lint]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."],
]

[tool.tox.env.type]
commands = [["ty", "check", "src"]]
